queda el ultimo apartado

--- a/contenido/animacions.html
+++ b/contenido/animacions.html
@@ -13,34 +13,35 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/animacions.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
-    <title>Document</title>
-    <title>Juan Ortega Herrerías</title>
+    <title>Cultural life</title>
 </head>
 
 <body>
     <!-- HEADER -->
     <header class="container-fluid">
-        <div class="row colorPrincipal justify-content-between ">
+        <div class="row colorPrincipal justify-content-between">
             <div class="col-12">
-                <div class="row align-items-center ">
+                <div class="row align-items-center">
                     <div class="col-1">
-                        <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
-          de cultural life" />
+                        <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono de cultural life" />
                     </div>
-                    <div class="col-12 col-md-6 ">
+                    <div class="col-12 col-md-6">
                         <h1 class="text-center text-md-start">CULTURAL LIFE</h1>
-                        <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.</h2>
+                        <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.
+                        </h2>
                     </div>
-                    <div class="col-12 col-md-4 justify-content-end ">
+                    <div class="col-12 col-md-4 justify-content-end">
                         <ul class="row list-inline text-center text-lg-end">
                             <li class="list-inline-item col">
                                 <a href="../contenido/login.html">
-                                    <i class="fa-solid fa-arrow-right-to-bracket fa-xs "> Entrar</i>
+                                    <i class="fa-solid fa-arrow-right-to-bracket fa-xs">Entrar</i>
                                 </a>
                             </li>
-                            <li class="list-inline-item col ">
-                                <a href="../contenido/nuevo_usuario.html"><i class="fa-solid fa-circle-plus fa-xs"> Nuevo_Usuario</i>
-                                </a>
+                            <li class="list-inline-item col">
+                                <a href="../contenido/nuevo_usuario.html"><i class="fa-solid
+                      fa-circle-plus
+                      fa-xs"> Nuevo_Usuario</i>
+                  </a>
                             </li>
                         </ul>
                     </div>
@@ -48,18 +49,21 @@
             </div>
 
             <div class="col-12 col-lg-6">
-                <ul class="row list-inline justify-content-start ">
+                <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
                         <a href="../index.html"><i class="fa-solid fa-house fa-2xs">&nbspInicio</i></a>
                     </li>
                     <li class="list-inline-item col-3">
-                        <a href="../contenido/el_critico.html"><i class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
+                        <a href="../contenido/el_critico.html"><i class="fa-solid
+                  fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
                     </li>
-                    <li class="list-inline-item  col-3">
-                        <a href="../contenido/novedades.html"><i class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
+                    <li class="list-inline-item col-3">
+                        <a href="../contenido/novedades.html"><i class="fa-solid
+                  fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
                     </li>
                     <li class="list-inline-item col-2">
-                        <a href="../contenido/contacto.html"><i class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
+                        <a href="../contenido/contacto.html"><i class="fa-solid
+                  fa-address-book fa-2xs">&nbspContacto</i></a>
                     </li>
                 </ul>
             </div>
@@ -68,29 +72,36 @@
     <!-- MAIN -->
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
-            <div class="col-12 ">
+            <h4>Actividades EAF-2</h4>
+            <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image
+                  fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/audio.html"><i class="fa-solid
+                  fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube
+                  fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/playlist.html"><i class="fa-solid
+                  fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="../contenido/transicions.html"><i class="fa-solid
+                  fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i class="fa-solid
+                  fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i class="fa-solid
+                  fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
@@ -100,79 +111,85 @@
             <div id="titulo-uh" class="col-12 mb-5">
                 <h2 class="p-2">OFERTAS DE ÚLTIMA HORA:</h2>
             </div>
-            <div id="ofertas-uh " class="container-fluid text-center row mt-5 ">
-                <div class="oferta col-12 col-lg-6 offset-xl-1 col-xl-4 mb-5 ">
-                    <img class="img-fluid " src="../imagenes/batalla_gallos.jpeg " alt="Batalla de gallos de Red Bull España " />
+            <div id="ofertas-uh" class="container-fluid text-center row
+          mt-5">
+                <div class="oferta col-12 col-lg-6 offset-xl-1 col-xl-4
+            mb-5">
+                    <img class="img-fluid" src="../imagenes/batalla_gallos.jpeg" alt="Batalla
+              de gallos de Red Bull España" />
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur quibusdam est quasi magnam voluptate asperiores obcaecati, esse, veritatis libero architecto dignissimos ut? Ipsa, cum cumque! Error ab ducimus iure atque repellat,
                         vel laborum, fugiat temporibus suscipit commodi nihil, ad modi asperiores accusamus? Tempore sit doloremque, id minus molestiae similique quasi quam porro, nobis ab optio corrupti fugiat officia ea esse eligendi tempora aspernatur
                         odio eius ducimus. Dolorem iure facere adipisci minus, optio quo corrupti, ut ipsa tempore suscipit non neque cupiditate et quam quasi esse magnam illo obcaecati possimus beatae? Fuga quasi necessitatibus nulla rem pariatur vero,
                         id doloremque distinctio atque eveniet mollitia maiores totam excepturi sapiente quae labore veniam officiis laudantium unde saepe voluptas provident nam voluptatem! Quae, aliquid? Quasi reiciendis delectus at error? Quae fugit
                         commodi possimus, unde hic minima, neque illo ea obcaecati omnis veritatis architecto quam est esse reiciendis velit recusandae odit aliquid incidunt! Perspiciatis, rerum?</p>
-                    <p class="text-start ">
-                        <a href="../contenido/resultados.html ">COMPRAR
-                                        ENTRADAS</a>
+                    <p class="text-start">
+                        <a href="../contenido/resultados.html">COMPRAR
+                ENTRADAS</a>
                     </p>
                 </div>
 
-                <div class="oferta col-12 col-lg-6 offset-xl-1 col-xl-4 mb-5 ">
-                    <img class="img-fluid " src="../imagenes/bumbury.jpg " alt="Bumbury en concierto " />
+                <div class="oferta col-12 col-lg-6 offset-xl-1 col-xl-4
+            mb-5">
+                    <img class="img-fluid" src="../imagenes/bumbury.jpg" alt="Bumbury
+              en concierto" />
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil distinctio adipisci incidunt dignissimos voluptatem, neque consequuntur perferendis debitis possimus, laudantium officiis sequi vitae voluptates asperiores exercitationem?
                         Iure maxime voluptatibus corrupti nisi asperiores est cupiditate in architecto laboriosam a. Ut explicabo eaque modi assumenda reprehenderit expedita. Iure dolore delectus fuga at autem corrupti debitis nostrum aliquam nemo earum
                         harum officiis deserunt laborum veniam, ut quaerat sint ullam porro praesentium, sed illum enim! Saepe dicta quas vitae est, earum ratione recusandae labore, exercitationem assumenda architecto reiciendis ducimus, magnam quo veniam
                         laborum eveniet? Earum soluta porro quis, quia itaque veritatis architecto at voluptates fugiat pariatur nihil similique obcaecati id corporis. Accusamus iusto at ipsam repellat. Reiciendis reprehenderit vero quidem architecto
                         exercitationem iure eaque, tempora excepturi odio hic a qui nostrum, libero neque sequi nemo error debitis veritatis totam incidunt nobis nisi! A suscipit ex eum saepe iusto exercitationem, quos harum expedita quas modi!</p>
-                    <p class="text-start ">
-                        <a href="../contenido/resultados.html ">COMPRAR
-                                    ENTRADAS</a>
+                    <p class="text-start">
+                        <a href="../contenido/resultados.html">COMPRAR
+                ENTRADAS</a>
                     </p>
                 </div>
             </div>
-            <div class="row ">
-                <div class="col-12 text-center ">
-                    <h2>5-2.CREACIÓ DE GIFS</h2>
-                    <img src="../imagenes/actividad-5-2.gif " alt="GIf de la actividad 5-2 " />
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2>5-2.CREACIÓN DE GIFS</h2>
+                    <img src="../imagenes/actividad-5-2.gif" alt="GIf de la
+              actividad 5-2" />
                 </div>
             </div>
-
         </main>
     </div>
-
     <!-- FOOTER -->
-    <footer class="container-fluid colorSecundario ">
-        <div class="row mt-5 align-items-xl-center ">
-            <div class="col-12 col-md-4 col-lg-3 col-xl-2 ">
+    <footer class="container-fluid colorSecundario">
+        <div class="row mt-5 align-items-xl-center">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
-                <ul class="list-inline ">
-                    <li class="list-inline-item ">
-                        <a href="http://www.instagram.com " target="_blank "><img class="icono colorSecundario " src="../imagenes/instagram.svg " alt="icono de instagram " /></a>
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                  de instagram" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://es-es.facebook.com/ " target="_blank "><img class="icono colorSecundario " src="../imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                  de facebook" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://twitter.com/ " target="_blank "><img class="icono colorSecundario " src="../imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono
+                  colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                  de twitter" /></a>
                     </li>
                 </ul>
             </div>
-            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6 " ">
-                <div class="container row align-items-center ">
-                    <div class="col ">
-                        <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
-                    </div>
-                    <div class="col-9 ">
-                        <h2>CULTURAL LIFE</h2>
-                        <h3>Nuestra vida es la cultura.</h3>
-                    </div>
-                </div>
+            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
+          <div class="container row align-items-center ">
+            <div class="col ">
+              <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
             </div>
-            <div class="col-12 text-end col-xl-4 ">
-
-                <p>Te informamos de los términos legales y nuestras
-                    <a href="# ">Condiciones de uso</a>
-                </p>
+            <div class="col-9 ">
+              <h2>CULTURAL LIFE</h2>
+              <h3>Nuestra vida es la cultura.</h3>
             </div>
-    </div>
+          </div>
+        </div>
+        <div class="col-12 text-end col-xl-4 ">
+          <p>Te informamos de los términos legales y nuestras
+            <a href="# ">Condiciones de uso</a>
+          </p>
+        </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
