--- a/contenido/audio.html
+++ b/contenido/audio.html
@@ -15,8 +15,7 @@
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
     <script src="../js/controlAudio.js"></script>
-    <title>Juan Ortega Herrerías</title>
-
+    <title>Cultural Life</title>
 </head>
 
 <body>
@@ -52,7 +51,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-12 col-lg-6">
                 <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
@@ -76,32 +74,40 @@
         </div>
     </header>
     <!-- MAIN -->
-
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4 id="titulo">Activitats EAF-2</h4>
+            <h4 id="titulo">Actividades EAF-2</h4>
             <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/imatges.html"><i
+                                    class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/audio.html"><i class="fa-solid
+                                    fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/video.html"><i
+                                    class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/playlist.html"><i
+                                    class="fa-solid fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="../contenido/transicions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
@@ -110,18 +116,23 @@
             <h1 class="text-center">FORMATO WEBP CON BASE MUSICAL</h1>
 
             <div class="m-2 text-center">
-                <button id="rw" class="p1 btn btn-primary"><i class="fa-solid fa-angles-left"></i></button>
-                <button id="playAudio" class="p1 btn btn-primary"><i class="fa-solid fa-play"></i></button>
-                <button id="fw" class="p1 btn btn-primary"><i class="fa-solid fa-angles-right"></i></button>
-                <button id="volplus" class="p1 btn btn-primary"><i class="fa-solid fa-volume-high"></i></button>
-                <button id="vol-" class="p1 btn btn-primary"><i class="fa-solid fa-volume-down"></i></button>
-                <button id="mute" class="p1 btn btn-primary"><i class="fa-solid fa-volume-xmark"></i></button>
+                <button id="rw" class="p1 btn btn-primary"><i
+                            class="fa-solid fa-angles-left"></i></button>
+                <button id="playAudio" class="p1 btn btn-primary"><i
+                            class="fa-solid fa-play"></i></button>
+                <button id="fw" class="p1 btn btn-primary"><i
+                            class="fa-solid fa-angles-right"></i></button>
+                <button id="volplus" class="p1 btn btn-primary"><i
+                            class="fa-solid fa-volume-high"></i></button>
+                <button id="vol-" class="p1 btn btn-primary"><i
+                            class="fa-solid fa-volume-down"></i></button>
+                <button id="mute" class="p1 btn btn-primary"><i
+                            class="fa-solid fa-volume-xmark"></i></button>
                 <p>Volum:<span id="volumen">100</span>%</p>
             </div>
+            <p class="text-center">Proyecto Audacity<a href="../audios/projecte.aup3">Proyecte.aup</a></p>
         </main>
     </div>
-
-
     <!-- FOOTER -->
     <footer class="container-fluid colorSecundario">
         <div class="row mt-5 align-items-xl-center">
@@ -162,7 +173,5 @@
                 </div>
             </div>
         </footer>
-       
     </body>
-
 </html>
