--- a/contenido/nuevo_usuario.html
+++ b/contenido/nuevo_usuario.html
@@ -12,32 +12,36 @@
     <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
-    <title>Juan Ortega Herrerías</title>
+    <title>Cultural Life</title>
 </head>
 
 <body>
     <header class="container-fluid">
-        <div class="row colorPrincipal justify-content-between ">
+        <div class="row colorPrincipal justify-content-between">
             <div class="col-12">
-                <div class="row align-items-center ">
+                <div class="row align-items-center">
                     <div class="col-1">
                         <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
-          de cultural life" />
+                                de cultural life" />
                     </div>
-                    <div class="col-12 col-md-6 ">
+                    <div class="col-12 col-md-6">
                         <h1 class="text-center text-md-start">CULTURAL LIFE</h1>
                         <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.</h2>
                     </div>
-                    <div class="col-12 col-md-4 justify-content-end ">
+                    <div class="col-12 col-md-4 justify-content-end">
                         <ul class="row list-inline text-center text-lg-end">
                             <li class="list-inline-item col">
                                 <a href="../contenido/login.html">
-                                    <i class="fa-solid fa-arrow-right-to-bracket fa-xs "> Entrar</i>
+                                    <i class="fa-solid
+                                            fa-arrow-right-to-bracket fa-xs">
+                                            Entrar</i>
                                 </a>
                             </li>
-                            <li class="list-inline-item col ">
-                                <a href="../contenido/nuevo_usuario.html"><i class="fa-solid fa-circle-plus fa-xs"> Nuevo_Usuario</i>
-                                </a>
+                            <li class="list-inline-item col">
+                                <a href="../contenido/nuevo_usuario.html"><i
+                                            class="fa-solid fa-circle-plus
+                                            fa-xs"> Nuevo_Usuario</i>
+                                    </a>
                             </li>
                         </ul>
                     </div>
@@ -45,18 +49,22 @@
             </div>
 
             <div class="col-12 col-lg-6">
-                <ul class="row list-inline justify-content-start ">
+                <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
-                        <a href="../index.html"><i class="fa-solid fa-house fa-2xs">&nbspInicio</i></a>
+                        <a href="../index.html"><i class="fa-solid fa-house
+                                    fa-2xs">&nbspInicio</i></a>
                     </li>
                     <li class="list-inline-item col-3">
-                        <a href="../contenido/el_critico.html"><i class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
+                        <a href="../contenido/el_critico.html"><i
+                                    class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
                     </li>
-                    <li class="list-inline-item  col-3">
-                        <a href="../contenido/novedades.html"><i class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
+                    <li class="list-inline-item col-3">
+                        <a href="../contenido/novedades.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
                     </li>
                     <li class="list-inline-item col-2">
-                        <a href="../contenido/contacto.html"><i class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
+                        <a href="../contenido/contacto.html"><i
+                                    class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
                     </li>
                 </ul>
             </div>
@@ -64,41 +72,53 @@
     </header>
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
-            <div class="col-12 ">
+            <h4>Actividades EAF-2</h4>
+            <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/imatges.html"><i
+                                    class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/audio.html"><i class="fa-solid
+                                    fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/video.html"><i
+                                    class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/playlist.html"><i
+                                    class="fa-solid fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="../contenido/transicions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <mIN class="col-12  offset-md-2 col-md-8 offset-lg-3 col-lg-6 mt-1 col-xl-5 offset-xl-4 text-center">
+        <mIN class="col-12 offset-md-2 col-md-8 offset-lg-3 col-lg-6 mt-1
+                col-xl-5 offset-xl-4 text-center">
             <h1>NUEVO USUARIO</h1>
 
-            <form action="../index.html" id="form" class="col-12 m-auto mt-5 mb-5">
-                <div class="datos_personales row ">
-                    <div class="col-12   m-auto ">
+            <form action="../index.html" id="form" class="col-12 m-auto mt-5
+                    mb-5">
+                <div class="datos_personales row">
+                    <div class="col-12 m-auto">
                         <h3>Datos Personales</h3>
-                        <div class="row text-start p-3 justify-content-between">
+                        <div class="row text-start p-3
+                                justify-content-between">
 
                             <label class="col-5">Nombre:</label>
                             <input class="col-7" type="text" placeholder="Escribe tu nombre..." />
@@ -117,18 +137,21 @@
                                     <option value="soltero">Soltero</option>
                                     <option value="casado/a">Casado/a</option>
                                     <option value="viudo/a">Viudo/a</option>
-                                    <option value="separado">Separado/a</option>                                
-                            </select>
+                                    <option value="separado">Separado/a</option>
+                                </select>
                             <label>Estado actual:</label>
                             <div class="row">
-                                <label class="col-6"><input type="radio"  value="trabajando"/> Trabajando</label>
-                                <label class="col-6"><input type="radio"  value="estudiando"/ >Estudiando</label>
-                                <label class="col-6"><input type="radio"  value="ambas"/> Ambas</label>
-                                <label class="col-6"><input type="radio"  value="ninguna"/> Ninguna</label>
+                                <label class="col-6"><input type="radio"
+                                            value="trabajando" /> Trabajando</label>
+                                <label class="col-6"><input type="radio"
+                                            value="estudiando" />Estudiando</label>
+                                <label class="col-6"><input type="radio"
+                                            value="ambas" /> Ambas</label>
+                                <label class="col-6"><input type="radio"
+                                            value="ninguna" /> Ninguna</label>
                             </div>
                         </div>
-
-                        <input type="submit" class="input-button " />
+                        <input type="submit" class="input-button" />
                     </div>
                 </div>
             </form>
@@ -155,24 +178,22 @@
                 </ul>
             </div>
             <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
-                <div class="container row align-items-center ">
-                    <div class="col ">
-                        <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
-                    </div>
-                    <div class="col-9 ">
-                        <h2>CULTURAL LIFE</h2>
-                        <h3>Nuestra vida es la cultura.</h3>
+                    <div class="container row align-items-center ">
+                        <div class="col ">
+                            <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
+                        </div>
+                        <div class="col-9 ">
+                            <h2>CULTURAL LIFE</h2>
+                            <h3>Nuestra vida es la cultura.</h3>
+                        </div>
                     </div>
                 </div>
+                <div class="col-12 text-end col-xl-4 ">
+                    <p>Te informamos de los términos legales y nuestras
+                        <a href="# ">Condiciones de uso</a>
+                    </p>
+                </div>
             </div>
-            <div class="col-12 text-end col-xl-4 ">
-
-                <p>Te informamos de los términos legales y nuestras
-                    <a href="# ">Condiciones de uso</a>
-                </p>
-            </div>
-        </div>
-    </footer>
-</body>
-
+        </footer>
+    </body>
 </html>
