--- a/contenido/grafica.html
+++ b/contenido/grafica.html
@@ -5,18 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300;400&family=Gelasio:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/guia_estils.css">
+    <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
-    <title>Juan Ortega Herrerías</title>
-
+    <title>Cultural Life</title>
 </head>
 
 <body>
@@ -52,7 +49,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-12 col-lg-6">
                 <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
@@ -75,51 +71,60 @@
             </div>
         </div>
     </header>
-
     <!-- MAIN -->
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
+            <h4>Actividades EAF-2</h4>
             <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/imatges.html"><i
+                                    class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/audio.html"><i class="fa-solid
+                                    fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/video.html"><i
+                                    class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/playlist.html"><i
+                                    class="fa-solid fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="../contenido/transicions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <main class="col-12 mt-1">
             <div class="row">
-                <div class="col-12 text-center ">
+                <div class="col-12 text-center">
                     <h2>5-3.INCORPORACIÓN DE GRÁFICAS DE DATOS</h2>
-                    <div class="row ">
-                        <div class="offset-1 col-10 col-xs-5  col-md-5 offset-xl-1 col-xl-4">
+                    <div class="row">
+                        <div class="offset-1 col-10 col-xs-5 col-md-5
+                                offset-xl-1 col-xl-4">
                             <canvas id="migrafico1" width="500" height="500"></canvas>
                         </div>
-                        <div class="offset-1 col-10 offset-xs-0 col-xs-5 col-md-5 col-xl-4">
+                        <div class="offset-1 col-10 offset-xs-0 col-xs-5
+                                col-md-5 col-xl-4">
                             <canvas id="migrafico2" width="500" height="500"></canvas>
                         </div>
                     </div>
                 </div>
-
                 <script src="../js/grafica.js"></script>
         </main>
         </div>
@@ -130,39 +135,39 @@
                     <h3>Mantente informado...</h3>
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
-                                    de instagram" /></a>
+                            <a href="http://www.instagram.com" target="_blank"><img class="icono
+                                        colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                                        de instagram" /></a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
-                                    colorSecundario" src="../imagenes/facebook.svg" alt="icono
-                                    de facebook" /></a>
+                                        colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                                        de facebook" /></a>
                         </li>
                         <li class="list-inline-item">
                             <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
-                                    de twitter" /></a>
+                                        de twitter" /></a>
                         </li>
                     </ul>
                 </div>
                 <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
-                    <div class="container row align-items-center ">
-                        <div class="col ">
-                            <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
-                        </div>
-                        <div class="col-9 ">
-                            <h2>CULTURAL LIFE</h2>
-                            <h3>Nuestra vida es la cultura.</h3>
+                        <div class="container row align-items-center ">
+                            <div class="col ">
+                                <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
+                            </div>
+                            <div class="col-9 ">
+                                <h2>CULTURAL LIFE</h2>
+                                <h3>Nuestra vida es la cultura.</h3>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 text-end col-xl-4 ">
+                    <div class="col-12 text-end col-xl-4 ">
 
-                    <p>Te informamos de los términos legales y nuestras
-                        <a href="# ">Condiciones de uso</a>
-                    </p>
+                        <p>Te informamos de los términos legales y nuestras
+                            <a href="# ">Condiciones de uso</a>
+                        </p>
+                    </div>
                 </div>
-            </div>
-        </footer>
-    </body>
-
-</html>
+            </footer>
+        </body>
+    </html>
