--- a/contenido/imatges.html
+++ b/contenido/imatges.html
@@ -5,17 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300;400&family=Gelasio:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/guia_estils.css">
+    <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
-    <title>Juan Ortega Herrerías</title>
-
+    <title>Cultural Life</title>
 </head>
 
 <body>
@@ -51,7 +48,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-12 col-lg-6">
                 <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
@@ -74,33 +70,41 @@
             </div>
         </div>
     </header>
-
     <!-- MAIN -->
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
+            <h4>Actividades EAF-2</h4>
             <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/imatges.html"><i
+                                    class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/audio.html"><i class="fa-solid
+                                    fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/video.html"><i
+                                    class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/playlist.html"><i
+                                    class="fa-solid fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="../contenido/transicions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
@@ -114,7 +118,8 @@
                     <tr>
                         <th scope="col">&nbsp</th>
                         <th scope="col">
-                            <a href="https://www.dzoom.org.es/redirect.php?tarticulo=adobe&rurl=http://www.photoshop.com/tools?wf=editor">Photoshops Express</a>
+                            <a href="https://www.dzoom.org.es/redirect.php?tarticulo=adobe&rurl=http://www.photoshop.com/tools?wf=editor">Photoshops
+                                    Express</a>
                         </th>
                         <th scope="col">
                             <a href="http://pixlr.com/editor/">Pixrl</a>
@@ -138,7 +143,8 @@
                         <th scope="row">Modalidad de uso</th>
                         <td>Tiene modalidad gratuita y de suscripción que permite muchas más opciones, además de funciones premium de otras aplicaciones Adobe.</td>
                         <td>tiene modalidad gratuita y de suscripción que aumenta las opciones, y además permite instalación en pc, para trabajar offline.</td>
-                        <td>Tiene modalidad gratuita, por suscriptción y educacional.</td>
+                        <td>Tiene modalidad gratuita, por suscriptción y educacional.
+                        </td>
                         <td>Tiene modalidad gratuita, pro y pro+, mejorando sus características a medida que mejora el plan. Tiene descuento educacional.</td>
                         <td>Tiene modalidad "completamente libre online"</td>
                         <td>Su modalidad principal es de pago. No permite exportar imagen sin estar registrado.</td>
@@ -154,9 +160,11 @@
                     </tr>
                     <tr>
                         <th scope="row">Formatos soportados</th>
-                        <td>Soporta la mayor parte de los formatos habituales.</td>
+                        <td>Soporta la mayor parte de los formatos habituales.
+                        </td>
                         <td>Soporta todos los formatos de imagen.</td>
-                        <td>Soporta la mayor parte de los formatos habituales.</td>
+                        <td>Soporta la mayor parte de los formatos habituales.
+                        </td>
                         <td>Soporta la mayoría de los formatos de imagen.</td>
                         <td>Soporta la muchos de los formatos de imagen generalmente usados.</td>
                         <td>Soporta muchos formatos de imagen habituales.</td>
@@ -165,7 +173,8 @@
                         <th scope="row">Características</th>
                         <td>No permite el uso de capas.No tiene herramientas de selección.Tiene una gran sencillez de uso.</td>
                         <td>Dispone de una interfaz similar a photoshop.Permite el uso de capas, y tiene una gran cantidad de filtros.</td>
-                        <td>Disponible en 18 idiomas.Aún siendo bastante completo, dispone de menos filtros que otros programas.</td>
+                        <td>Disponible en 18 idiomas.Aún siendo bastante completo, dispone de menos filtros que otros programas.
+                        </td>
                         <td>Dispone de la tecnología HDR, amplio almacenamiento en la nuve con Fotor Cloud y dispone de muchos recursos para el diseño.</td>
                         <td>ES una web-app totalmente gratuita. Tiene una interfaz compleja de manejar, pero permite realizar muchas tareas. </td>
                         <td>Es una aplicación que permite realizar tarjetas, cartas y manejar imagenes para cartelería similar a la conocida aplicación Canva.</td>
@@ -216,5 +225,4 @@
             </div>
         </footer>
     </body>
-
 </html>
