--- a/contenido/login.html
+++ b/contenido/login.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
-    <title>Juan Ortega Herrerías</title>
+    <title>Cultural Life</title>
 </head>
 
 <body>
@@ -45,7 +45,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-12 col-lg-6">
                 <ul class="row list-inline justify-content-start ">
                     <li class="list-inline-item col-2">
@@ -67,7 +66,7 @@
     <!-- MAIN -->
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
+            <h4>Actividades EAF-2</h4>
             <div class="col-12 ">
                 <ul class="row list-inline justify-content-lg-start">
                     <li class="list-inline-item col-3 col-md-1 ">
@@ -154,5 +153,4 @@
         </div>
     </footer>
 </body>
-
 </html>
