--- a/contenido/novedades.html
+++ b/contenido/novedades.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,82 +12,97 @@
     <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
-    <title>Juan Ortega Herrerías</title>
+    <title>Cultural Life</title>
 </head>
 
 <body>
     <header class="container-fluid">
-        <div class="row colorPrincipal justify-content-between ">
+        <div class="row colorPrincipal justify-content-between">
             <div class="col-12">
-                <div class="row align-items-center ">
+                <div class="row align-items-center">
                     <div class="col-1">
-                        <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
-          de cultural life" />
+                        <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono de
+                                cultural life" />
                     </div>
-                    <div class="col-12 col-md-6 ">
+                    <div class="col-12 col-md-6">
                         <h1 class="text-center text-md-start">CULTURAL LIFE</h1>
                         <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.</h2>
                     </div>
-                    <div class="col-12 col-md-4 justify-content-end ">
+                    <div class="col-12 col-md-4 justify-content-end">
                         <ul class="row list-inline text-center text-lg-end">
                             <li class="list-inline-item col">
                                 <a href="../contenido/login.html">
-                                    <i class="fa-solid fa-arrow-right-to-bracket fa-xs "> Entrar</i>
+                                    <i class="fa-solid
+                                            fa-arrow-right-to-bracket fa-xs">
+                                            Entrar</i>
                                 </a>
                             </li>
-                            <li class="list-inline-item col ">
-                                <a href="../contenido/nuevo_usuario.html"><i class="fa-solid fa-circle-plus fa-xs"> Nuevo_Usuario</i>
-                                </a>
+                            <li class="list-inline-item col">
+                                <a href="../contenido/nuevo_usuario.html"><i
+                                            class="fa-solid fa-circle-plus
+                                            fa-xs"> Nuevo_Usuario</i>
+                                    </a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-
             <div class="col-12 col-lg-6">
-                <ul class="row list-inline justify-content-start ">
+                <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
-                        <a href="../index.html"><i class="fa-solid fa-house fa-2xs">&nbspInicio</i></a>
+                        <a href="../index.html"><i class="fa-solid fa-house
+                                    fa-2xs">&nbspInicio</i></a>
                     </li>
                     <li class="list-inline-item col-3">
-                        <a href="../contenido/el_critico.html"><i class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
+                        <a href="../contenido/el_critico.html"><i
+                                    class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
                     </li>
-                    <li class="list-inline-item  col-3">
-                        <a href="../contenido/novedades.html"><i class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
+                    <li class="list-inline-item col-3">
+                        <a href="../contenido/novedades.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
                     </li>
                     <li class="list-inline-item col-2">
-                        <a href="../contenido/contacto.html"><i class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
+                        <a href="../contenido/contacto.html"><i
+                                    class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
                     </li>
                 </ul>
             </div>
         </div>
     </header>
-
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
-            <div class="col-12 ">
+            <h4>Actividades EAF-2</h4>
+            <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/imatges.html"><i
+                                    class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/audio.html"><i class="fa-solid
+                                    fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/video.html"><i
+                                    class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/playlist.html"><i
+                                    class="fa-solid fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="../contenido/transicions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
@@ -98,15 +112,17 @@
                 <h2>NOVEDADES</h2>
             </div>
             <div class="row">
-                <article class="col-12 col-lg-6 col-xl-3 ">
+                <article class="col-12 col-lg-6 col-xl-3">
                     <div class="row text-center">
                         <figure class="col">
-                            <img class="img-fluid" src="../imagenes/bumbury.jpg" alt="Disco nuevo de bumbury" />
+                            <img class="img-fluid" src="../imagenes/bumbury.jpg" alt="Disco
+                                    nuevo de bumbury" />
                             <figcaption>Bumbury en concierto</figcaption>
                         </figure>
                     </div>
                     <div>
-                        <h3 class="text-center">BUMBURY EN LA SALA RAZZMATAZZ</h3>
+                        <h3 class="text-center">BUMBURY EN LA SALA RAZZMATAZZ
+                        </h3>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
                             fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam, iste
@@ -118,12 +134,13 @@
                         </p>
 
                     </div>
-                    <p><a href="../contenido/resultados.html">COMPRAR ENTRADAS</a></p>
+                    <p><a href="../contenido/resultados.html">COMPRAR
+                                ENTRADAS</a></p>
                 </article>
-                <article class="col-12 col-lg-6 col-xl-3 ">
-                    <div class="row text-center  ">
+                <article class="col-12 col-lg-6 col-xl-3">
+                    <div class="row text-center">
                         <figure class="col">
-                            <img class="img-fluid " src="../imagenes/zapato_veloz_in_concert.jpg" alt="Concierto de zapato veloz" />
+                            <img class="img-fluid" src="../imagenes/zapato_veloz_in_concert.jpg" alt="Concierto de zapato veloz" />
                             <figcaption>Zapato veloz live</figcaption>
                         </figure>
                     </div>
@@ -138,11 +155,12 @@
                             dolores tempora. Error qui ratione omnis, esse illum placeat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto
                             deleniti quidem ad fuga quo necessitatibus non odio delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
                         </p>
-                        <p><a href="../contenido/resultados.html">COMPRAR ENTRADAS</a></p>
+                        <p><a href="../contenido/resultados.html">COMPRAR
+                                    ENTRADAS</a></p>
                     </div>
                 </article>
-                <article class="col-12 col-lg-6 col-xl-3 ">
-                    <div class="row  text-center ">
+                <article class="col-12 col-lg-6 col-xl-3">
+                    <div class="row text-center">
                         <figure class="col">
                             <img class="img-fluid" src="../imagenes/Tu_actriz_favorita.png" alt="Locura en gravidez" />
                             <figcaption>Anna Torner</figcaption>
@@ -159,13 +177,14 @@
                             dolores tempora. Error qui ratione omnis, esse illum placeat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto
                             deleniti quidem ad fuga quo necessitatibus non odio delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
                         </p>
-                        <p><a href="../contenido/resultados.html">COMPRAR ENTRADAS</a></p>
+                        <p><a href="../contenido/resultados.html">COMPRAR
+                                    ENTRADAS</a></p>
                     </div>
                 </article>
-                <article class="col-12 col-lg-6 col-xl-3  ">
+                <article class="col-12 col-lg-6 col-xl-3">
                     <div class="row text-center">
-                        <figure class="col ">
-                            <img class="img-fluid " src="../imagenes/bambo_greeeps_show.jpeg" alt="Teatro alternativo bambo greeeps show" />
+                        <figure class="col">
+                            <img class="img-fluid" src="../imagenes/bambo_greeeps_show.jpeg" alt="Teatro alternativo bambo greeeps show" />
                             <figcaption>Bambo greeps show</figcaption>
                         </figure>
                     </div>
@@ -180,7 +199,8 @@
                             dolores tempora. Error qui ratione omnis, esse illum placeat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto
                             deleniti quidem ad fuga quo necessitatibus non odio delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
                         </p>
-                        <p><a href="../contenido/resultados.html">COMPRAR ENTRADAS</a></p>
+                        <p><a href="../contenido/resultados.html">COMPRAR
+                                    ENTRADAS</a></p>
                     </div>
                 </article>
             </div>
@@ -207,25 +227,23 @@
                 </ul>
             </div>
             <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
-                <div class="container row align-items-center ">
-                    <div class="col ">
-                        <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
-                    </div>
-                    <div class="col-9 ">
-                        <h2>CULTURAL LIFE</h2>
-                        <h3>Nuestra vida es la cultura.</h3>
+                    <div class="container row align-items-center ">
+                        <div class="col ">
+                            <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
+                        </div>
+                        <div class="col-9 ">
+                            <h2>CULTURAL LIFE</h2>
+                            <h3>Nuestra vida es la cultura.</h3>
+                        </div>
                     </div>
                 </div>
+                <div class="col-12 text-end col-xl-4 ">
+
+                    <p>Te informamos de los términos legales y nuestras
+                        <a href="# ">Condiciones de uso</a>
+                    </p>
+                </div>
             </div>
-            <div class="col-12 text-end col-xl-4 ">
-
-                <p>Te informamos de los términos legales y nuestras
-                    <a href="# ">Condiciones de uso</a>
-                </p>
-            </div>
-        </div>
-    </footer>
-
-</body>
-
+        </footer>
+    </body>
 </html>
