--- a/contenido/playlist.html
+++ b/contenido/playlist.html
@@ -18,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jplayer/jquery.jplayer.min.js" integrity="sha512-g0etrk7svX8WYBp+ZDIqeenmkxQSXjRDTr08ie37rVFc99iXFGxmD0/SCt3kZ6sDNmr8sR0ISHkSAc/M8rQBqg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/add-on/jplayer.playlist.min.js" integrity="sha512-URFV3t5uXfvKOagAfyhVvwKvilA4QPsnyCAd4I7GHPer6eipGwz/1l/XLvjNMc4CUz1LDvIqYqQV/YZE9Uf7Hg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/controlPlaylist.js"></script>
-    <title>Juan Ortega Herrerías</title>
+    <title>Cultural Life</title>
 </head>
 
 <body>
@@ -54,7 +54,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-12 col-lg-6">
                 <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
@@ -80,35 +79,44 @@
     <!-- MAIN -->
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
+            <h4>Actividades EAF-2</h4>
             <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/imatges.html"><i
+                                    class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/audio.html"><i class="fa-solid
+                                    fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/video.html"><i
+                                    class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/playlist.html"><i
+                                    class="fa-solid fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="../contenido/transicions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <main class="row mt-5">
-            <div class="col-12 col-md-6 ">
+            <div class="col-12 col-md-6">
                 <h1 class="text-center">REPRODUCTOR DE VÍDEO PARA LA WEB</h1>
                 <p>Esta aplicación requiere importar 5 elementos:</p>
                 <ol>
@@ -125,106 +133,103 @@
                 <p>Además, podremos configurar la playlist con una série de valores dentro del constructor, como pueden ser los tipos de archivos que acepte, o si queremos que se pueda abrir a todo pantalla.</p>
                 <p>Dentro del html, tenemos que incluir un div con el id jp_container_N, como contenedor de nuestra aplicación.Éste contiene un segundo div principal con la clase jp-type-playslist que contiene varios elementos.</p>
                 <p>En orden, desde arriba podemos ver el reproductor de video, la barra de reproducción, el divisor que contiene los controles, dividido a su vez en sonido, reproducción y otras funciones.</p>
-                <p>Por último, tenemos un divisor con la clase jp-playlist que es donde aparecerá el listado de videos.Lo hará dentro del elemento Li, como explica en la documentación.</p>
+                <p>Por último, tenemos un divisor con la clase jp-playlist que es donde aparecerá el listado de videos.Lo hará dentro del elemento Li, como explica en la documentación.
+                </p>
             </div>
-            <div class=" col-12 offset-md-1 col-md-4 text-center ">
-                <div id="jp_container_N" class="jp-video  jp-video-270p" role="application" aria-label="media player">
+            <div class="col-12 offset-md-1 col-md-4 text-center">
+                <div id="jp_container_N" class="jp-video jp-video-270p" role="application" aria-label="media player">
                     <div class="jp-type-playlist">
                         <div id="jquery_jplayer_N" class="jp-jplayer">
-                            <video id="jp_video_0 " preload="metadata ">
-                            </video>
+                            <video id="jp_video_0" preload="metadata">
+                                </video>
                         </div>
                         <div class="jp-gui">
-                            <div class="jp-video-play " style="display:none ">
-                                <button class="jp-video-play-icon jp-play " role="button " tabindex="0 ">play</button>
+                            <div class="jp-video-play" style="display:none">
+                                <button class="jp-video-play-icon jp-play" role="button" tabindex="0">play</button>
                             </div>
 
-                            <div class="jp-interface ">
-                                <div class="jp-progress ">
-                                    <div class="jp-seek-bar " style="width:100%; ">
-                                        <div class="jp-play-bar " style=width:100%></div>
+                            <div class="jp-interface">
+                                <div class="jp-progress">
+                                    <div class="jp-seek-bar" style="width:100%;">
+                                        <div class="jp-play-bar" style=width:100%></div>
                                     </div>
                                 </div>
-                                <div class="jp-current-time " role="timer " aria-label="time ">&nbsp</div>
-                                <div class="jp-duration " role="timer " aria-label="duration ">&nbsp</div>
-                                <div class="jp-controls-holder " style="margin-top: 20px; ">
-                                    <div class="jp-volume-controls ">
-                                        <button class="jp-mute " role="button " tabindex="0 ">mute</button>
-                                        <button class="jp-volume-max " role="button " tabindex="0 ">max volume</button>
-                                        <div class="jp-volume-bar ">
-                                            <div class="jp-volume-bar-value " style="width:80%; "></div>
+                                <div class="jp-current-time" role="timer" aria-label="time">&nbsp</div>
+                                <div class="jp-duration" role="timer" aria-label="duration">&nbsp</div>
+                                <div class="jp-controls-holder" style="margin-top:
+                                        20px;">
+                                    <div class="jp-volume-controls">
+                                        <button class="jp-mute" role="button" tabindex="0">mute</button>
+                                        <button class="jp-volume-max" role="button" tabindex="0">max
+                                                volume</button>
+                                        <div class="jp-volume-bar">
+                                            <div class="jp-volume-bar-value" style="width:80%;"></div>
                                         </div>
                                     </div>
-                                    <div class="jp-controls ">
-                                        <button class="jp-previous " role="button " tabindex="0 ">previous</button>
-                                        <button class="jp-play " role="button " tabindex="0 ">play</button>
-                                        <button class="jp-stop " role="button " tabindex="0 ">stop</button>
-                                        <button class="jp-next " role="button " tabindex="0 ">next</button>
+                                    <div class="jp-controls">
+                                        <button class="jp-previous" role="button" tabindex="0">previous</button>
+                                        <button class="jp-play" role="button" tabindex="0">play</button>
+                                        <button class="jp-stop" role="button" tabindex="0">stop</button>
+                                        <button class="jp-next" role="button" tabindex="0">next</button>
                                     </div>
-                                    <div class="jp-toggles ">
-                                        <button class="jp-repeat " role="button " tabindex="0 ">repeat</button>
-                                        <button class="jp-shuffle " role="button " tabindex="0 ">shuffle</button>
-                                        <button class="jp-full-screen " role="button " tabindex="0 ">full screen</button>
+                                    <div class="jp-toggles">
+                                        <button class="jp-repeat" role="button" tabindex="0">repeat</button>
+                                        <button class="jp-shuffle" role="button" tabindex="0">shuffle</button>
+                                        <button class="jp-full-screen" role="button" tabindex="0">full
+                                                screen</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="jp-playlist ">
-                            <ul style="display:block ">
-                                <li class="jp-playlist-current ">
+                        <div class="jp-playlist">
+                            <ul style="display:block">
+                                <li class="jp-playlist-current">
 
                                 </li>
                             </ul>
                         </div>
-
                     </div>
                 </div>
-
-
-
-
-
-
-
-
         </main>
         </div>
         <!-- FOOTER -->
-        <footer class="container-fluid colorSecundario ">
-            <div class="row mt-5 align-items-xl-center ">
-                <div class="col-12 col-md-4 col-lg-3 col-xl-2 ">
+        <footer class="container-fluid colorSecundario">
+            <div class="row mt-5 align-items-xl-center">
+                <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                     <h3>Mantente informado...</h3>
-                    <ul class="list-inline ">
-                        <li class="list-inline-item ">
-                            <a href="http://www.instagram.com " target="_blank "><img class="icono colorSecundario " src="../imagenes/instagram.svg " alt="icono de instagram " /></a>
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                                        de instagram" /></a>
                         </li>
-                        <li class="list-inline-item ">
-                            <a href="https://es-es.facebook.com/ " target="_blank "><img class="icono colorSecundario " src="../imagenes/facebook.svg " alt="icono de facebook " /></a>
+                        <li class="list-inline-item">
+                            <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                                        de facebook" /></a>
                         </li>
-                        <li class="list-inline-item ">
-                            <a href="https://twitter.com/ " target="_blank "><img class="icono colorSecundario " src="../imagenes/twitter.svg " alt="icono de twitter " /></a>
+                        <li class="list-inline-item">
+                            <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                                        de twitter" /></a>
                         </li>
                     </ul>
                 </div>
-                <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6 " ">
-                            <div class="container row align-items-center ">
-                                <div class="col ">
-                                    <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
-                                </div>
-                                <div class="col-9 ">
-                                    <h2>CULTURAL LIFE</h2>
-                                    <h3>Nuestra vida es la cultura.</h3>
-                                </div>
+                <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
+                        <div class="container row align-items-center ">
+                            <div class="col ">
+                                <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
+                            </div>
+                            <div class="col-9 ">
+                                <h2>CULTURAL LIFE</h2>
+                                <h3>Nuestra vida es la cultura.</h3>
                             </div>
                         </div>
-                        <div class="col-12 text-end col-xl-4 ">
-
-                            <p>Te informamos de los términos legales y nuestras
-                                <a href="# ">Condiciones de uso</a>
-                            </p>
-                        </div>
                     </div>
-                    </footer>
-</body>
+                    <div class="col-12 text-end col-xl-4 ">
 
-</html>
+                        <p>Te informamos de los términos legales y nuestras
+                            <a href="# ">Condiciones de uso</a>
+                        </p>
+                    </div>
+                </div>
+            </footer>
+        </body>
+    </html>
