--- a/contenido/resultados.html
+++ b/contenido/resultados.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,51 +12,58 @@
     <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
-    <title>Juan Ortega Herrerías</title>
+    <title>Cultural Life</title>
 </head>
 
 <body>
     <header class="container-fluid">
-        <div class="row colorPrincipal justify-content-between ">
+        <div class="row colorPrincipal justify-content-between">
             <div class="col-12">
-                <div class="row align-items-center ">
+                <div class="row align-items-center">
                     <div class="col-1">
                         <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
-          de cultural life" />
+                                de cultural life" />
                     </div>
-                    <div class="col-12 col-md-6 ">
+                    <div class="col-12 col-md-6">
                         <h1 class="text-center text-md-start">CULTURAL LIFE</h1>
                         <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.</h2>
                     </div>
-                    <div class="col-12 col-md-4 justify-content-end ">
+                    <div class="col-12 col-md-4 justify-content-end">
                         <ul class="row list-inline text-center text-lg-end">
                             <li class="list-inline-item col">
                                 <a href="../contenido/login.html">
-                                    <i class="fa-solid fa-arrow-right-to-bracket fa-xs "> Entrar</i>
+                                    <i class="fa-solid
+                                            fa-arrow-right-to-bracket fa-xs">
+                                            Entrar</i>
                                 </a>
                             </li>
-                            <li class="list-inline-item col ">
-                                <a href="../contenido/nuevo_usuario.html"><i class="fa-solid fa-circle-plus fa-xs"> Nuevo_Usuario</i>
-                                </a>
+                            <li class="list-inline-item col">
+                                <a href="../contenido/nuevo_usuario.html"><i
+                                            class="fa-solid fa-circle-plus
+                                            fa-xs"> Nuevo_Usuario</i>
+                                    </a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-
             <div class="col-12 col-lg-6">
-                <ul class="row list-inline justify-content-start ">
+                <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
-                        <a href="../index.html"><i class="fa-solid fa-house fa-2xs">&nbspInicio</i></a>
+                        <a href="../index.html"><i class="fa-solid fa-house
+                                    fa-2xs">&nbspInicio</i></a>
                     </li>
                     <li class="list-inline-item col-3">
-                        <a href="../contenido/el_critico.html"><i class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
+                        <a href="../contenido/el_critico.html"><i
+                                    class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
                     </li>
-                    <li class="list-inline-item  col-3">
-                        <a href="../contenido/novedades.html"><i class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
+                    <li class="list-inline-item col-3">
+                        <a href="../contenido/novedades.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
                     </li>
                     <li class="list-inline-item col-2">
-                        <a href="../contenido/contacto.html"><i class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
+                        <a href="../contenido/contacto.html"><i
+                                    class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
                     </li>
                 </ul>
             </div>
@@ -65,29 +71,38 @@
     </header>
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
-            <div class="col-12 ">
+            <h4>Actividades EAF-2</h4>
+            <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/imatges.html"><i
+                                    class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/audio.html"><i class="fa-solid
+                                    fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/video.html"><i
+                                    class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/playlist.html"><i
+                                    class="fa-solid fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="../contenido/transicions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
@@ -98,15 +113,15 @@
                 <h4>El usuario buscó:"Zapato veloz"</h4>
             </div>
             <div class="row">
-                <div class="col-12  col-lg-4 ">
-                    <div class="row text-center ">
+                <div class="col-12 col-lg-4">
+                    <div class="row text-center">
                         <figure class="col">
                             <img class="img-fluid" src="../imagenes/zapato_veloz_in_concert.jpg" alt="Zapato veloz en concierto" />
                             <figcaption>Zapato veloz life</figcaption>
                         </figure>
                     </div>
                 </div>
-                <table class="table-bordered col-12  col-lg-8 text-center">
+                <table class="table-bordered col-12 col-lg-8 text-center">
                     <thead>
                         <tr>
                             <th scope="col">Fecha</th>
@@ -122,7 +137,8 @@
                             <td>22:00h</td>
                             <td>Camp Nou Barcelona</td>
                             <td>18€</td>
-                            <td><button onclick="alert('Entrada comprada')"><a href="../index.html">Comprar</a></button></td>
+                            <td><button onclick="alert('Entrada comprada')"><a
+                                            href="../index.html">Comprar</a></button></td>
                         </tr>
                         <tr>
                             <tr>
@@ -168,24 +184,22 @@
                 </ul>
             </div>
             <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
-                <div class="container row align-items-center ">
-                    <div class="col ">
-                        <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
-                    </div>
-                    <div class="col-9 ">
-                        <h2>CULTURAL LIFE</h2>
-                        <h3>Nuestra vida es la cultura.</h3>
+                    <div class="container row align-items-center ">
+                        <div class="col ">
+                            <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
+                        </div>
+                        <div class="col-9 ">
+                            <h2>CULTURAL LIFE</h2>
+                            <h3>Nuestra vida es la cultura.</h3>
+                        </div>
                     </div>
                 </div>
+                <div class="col-12 text-end col-xl-4 ">
+                    <p>Te informamos de los términos legales y nuestras
+                        <a href="# ">Condiciones de uso</a>
+                    </p>
+                </div>
             </div>
-            <div class="col-12 text-end col-xl-4 ">
-
-                <p>Te informamos de los términos legales y nuestras
-                    <a href="# ">Condiciones de uso</a>
-                </p>
-            </div>
-        </div>
-    </footer>
-</body>
-
+        </footer>
+    </body>
 </html>
