--- a/contenido/transicions.html
+++ b/contenido/transicions.html
@@ -13,54 +13,60 @@
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/transicions.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-    <title>Juan Ortega Herrerías</title>
+    <title>Cultural Life</title>
 </head>
 
 <body>
     <!-- HEADER -->
     <header class="container-fluid">
-        <div class="row colorPrincipal justify-content-between ">
+        <div class="row colorPrincipal justify-content-between">
             <div class="col-12">
-                <div class="row align-items-center ">
+                <div class="row align-items-center">
                     <div class="col-1">
                         <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
-          de cultural life" />
+                                de cultural life" />
                     </div>
-                    <div class="col-12 col-md-6 ">
+                    <div class="col-12 col-md-6">
                         <h1 class="text-center text-md-start">CULTURAL LIFE</h1>
                         <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.</h2>
                     </div>
-                    <div class="col-12 col-md-4 justify-content-end ">
+                    <div class="col-12 col-md-4 justify-content-end">
                         <ul class="row list-inline text-center text-lg-end">
                             <li class="list-inline-item col">
                                 <a href="../contenido/login.html">
-                                    <i class="fa-solid fa-arrow-right-to-bracket fa-xs "> Entrar</i>
+                                    <i class="fa-solid
+                                            fa-arrow-right-to-bracket fa-xs">
+                                            Entrar</i>
                                 </a>
                             </li>
-                            <li class="list-inline-item col ">
-                                <a href="../contenido/nuevo_usuario.html"><i class="fa-solid fa-circle-plus fa-xs"> Nuevo_Usuario</i>
-                                </a>
+                            <li class="list-inline-item col">
+                                <a href="../contenido/nuevo_usuario.html"><i
+                                            class="fa-solid fa-circle-plus
+                                            fa-xs"> Nuevo_Usuario</i>
+                                    </a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-
             <div class="col-12 col-lg-6">
-                <ul class="row list-inline justify-content-start ">
+                <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
-                        <a href="../index.html"><i class="fa-solid fa-house fa-2xs">&nbspInicio</i></a>
+                        <a href="../index.html"><i class="fa-solid fa-house
+                                    fa-2xs">&nbspInicio</i></a>
                     </li>
                     <li class="list-inline-item col-3">
-                        <a href="../contenido/el_critico.html"><i class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
+                        <a href="../contenido/el_critico.html"><i
+                                    class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
                     </li>
-                    <li class="list-inline-item  col-3">
-                        <a href="../contenido/novedades.html"><i class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
+                    <li class="list-inline-item col-3">
+                        <a href="../contenido/novedades.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
                     </li>
                     <li class="list-inline-item col-2">
-                        <a href="../contenido/contacto.html"><i class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
+                        <a href="../contenido/contacto.html"><i
+                                    class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
                     </li>
                 </ul>
             </div>
@@ -69,93 +75,107 @@
     <!-- MAIN -->
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
-            <div class="col-12 ">
+            <h4>Actividades EAF-2</h4>
+            <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/imatges.html"><i
+                                    class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/audio.html"><i class="fa-solid
+                                    fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/video.html"><i
+                                    class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/playlist.html"><i
+                                    class="fa-solid fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="../contenido/transicions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <main class="container-fluid">
             <div class="text-center">
-                <h2 id="ofertas" class="colorPrincipal d-inline-block ">LAS OFERTAS DE LA SEMANA SON:
+                <h2 id="ofertas" class="colorPrincipal d-inline-block">LAS OFERTAS DE LA SEMANA SON:
                 </H2>
             </div>
-            <div class="mt-5 offset-3 col-10">
-                <div class=row ">                   
-                    <div class="txt-oferta ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere porro obcaecati magni, expedita libero harum laudantium ut dignissimos! Eaque voluptatibus nulla consectetur numquam necessitatibus a esse amet sed ad modi! Tempora nesciunt
-                        quis quos reprehenderit dolor sint ad repudiandae expedita odit culpa beatae quam, recusandae quidem dignissimos eum dolore ab explicabo suscipit. Temporibus facilis dolor repellat recusandae sapiente, eveniet maiores natus illo
-                        nostrum hic aut, non magni beatae voluptatibus aliquam ullam quo molestias quos obcaecati. Ullam repellendus vel nostrum modi asperiores, reiciendis nesciunt nam recusandae! Illum, quidem iure. Delectus harum quaerat similique
-                        dolorum sunt ab, fugiat deleniti culpa, ipsam nisi dicta ea! Illo natus optio quis voluptatibus, hic veniam amet libero corrupti minima iste ipsum et quos debitis atque rem! Consectetur, veniam! Culpa quo atque voluptate quas voluptates
-                        reprehenderit ut sit, dolore facilis inventore dolorem veniam rerum, ipsa dolores optio maxime nesciunt sint corrupti quod ex nemo voluptatem natus. Distinctio laboriosam voluptas id obcaecati, ipsa vitae sunt molestias sapiente
-                        unde similique inventore veritatis voluptate nemo facilis modi, iure quasi odit accusamus maxime dolor? Laborum amet ex cumque, minima aliquid eaque, iste, sed delectus voluptate atque doloremque non minus pariatur facilis totam
-                        am distinctio totam voluptatibus voluptate id voluptatem molestias, eos sit, dolorum ratione alias ex minus temporibus! Consequatur voluptate, explicabo magnam, animi et totam, dolorum quidem ut amet laborum tempore.
-                        <p>
-                            <a href="../contenido/resultados.html ">COMPRAR
-                                    ENTRADAS</a>
-                        </p>
-                    </div>
-                    <img class="img-oferta ofer1 " src="../imagenes/slastic_1986.jpg " alt="Slastic de 'El tricicle' " />
-                </div>
-                <div class="row ">
-                    <img class="img-oferta ofer2 " src="../imagenes/El_Rey_Leon.jpg " alt="Slastic de 'El tricicle' " />
-                    <div class="txt-oferta ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere porro obcaecati magni, expedita libero harum laudantium ut dignissimos! Eaque voluptatibus nulla consectetur numquam necessitatibus a esse amet sed ad modi! Tempora nesciunt
-                        quis quos reprehenderit dolor sint ad repudiandae expedita odit culpa beatae quam, recusandae quidem dignissimos eum dolore ab explicabo suscipit. Temporibus facilis dolor repellat recusandae sapiente, eveniet maiores natus illo
-                        nostrum hic aut, non magni beatae voluptatibus aliquam ullam quo molestias quos obcaecati. Ullam repellendus vel nostrum modi asperiores, reiciendis nesciunt nam recusandae! Illum, quidem iure. Delectus harum quaerat similique
-                        dolorum sunt ab, fugiat deleniti culpa, ipsam nisi dicta ea! Illo natus optio quis voluptatibus, hic veniam amet libero corrupti minima iste ipsum et quos debitis atque rem! Consectetur, veniam! Culpa quo atque voluptate quas voluptates
-                        <p>
-                            <a href="../contenido/resultados.html ">COMPRAR
-                                    ENTRADAS</a>
-                        </p>
-                    </div>
+            <div class="col-12">
+                <div class="mt-5 row">
+                    <div class="col-12 col-md-6 col-4 oferta">
+                        <div class="row  position-relative">
 
-                       
+                            <img class="img-oferta col-12 offset-lg-2 col-lg-8 position-absolute" src="../imagenes/slastic_1986.jpg" alt="Slastic
+                                de 'El tricicle'" />
+                            <div class="col-10 offset-2 col-lg-8 ">
+                                <p>Lorem ipsum dolor sit am distinctio totam voluptatibus voluptate id voluptatem molestias, eos sit, dolorum ratione alias ex minus temporibus! Consequatur voluptate, explicabo magnam, animi et totam, dolorum quidem ut amet
+                                    laborum tempore.
+                                    <p><a href="../contenido/resultados.html">COMPRAR
+                                            ENTRADAS</a></p>
+                                </p>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-4 oferta">
+                        <div class="row  position-relative">
+
+                            <img class="img-oferta col-12 offset-lg-1 col-lg-10 position-absolute" src="../imagenes/El_Rey_Leon.jpg" alt="El rey León" />
+                            <div class="col-12 offset-lg-2 col-lg-8">
+                                <p>Lorem ipsum dolor sit am distinctio totam voluptatibus voluptate id voluptatem molestias, eos sit, dolorum ratione alias ex minus temporibus! Consequatur voluptate, explicabo magnam, animi et totam, dolorum quidem ut amet
+                                    laborum tempore.
+                                    <p><a href="../contenido/resultados.html">COMPRAR
+                                            ENTRADAS</a></p>
+                                </p>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
     </div>
-
     <!-- FOOTER -->
-    <footer class="container-fluid colorSecundario ">
-        <div class="row mt-5 align-items-xl-center ">
-            <div class="col-12 col-md-4 col-lg-3 col-xl-2 ">
+    <footer class="container-fluid colorSecundario">
+        <div class="row mt-5 align-items-xl-center">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
-                <ul class="list-inline ">
-                    <li class="list-inline-item ">
-                        <a href="http://www.instagram.com " target="_blank "><img class="icono colorSecundario " src="../imagenes/instagram.svg " alt="icono de instagram " /></a>
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                                    de instagram" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://es-es.facebook.com/ " target="_blank "><img class="icono colorSecundario " src="../imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
+                                    colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                                    de facebook" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://twitter.com/ " target="_blank "><img class="icono colorSecundario " src="../imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                                    de twitter" /></a>
                     </li>
                 </ul>
             </div>
-            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6 " ">
+            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
                     <div class="container row align-items-center ">
                         <div class="col ">
-                            <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
+                            <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
                         </div>
                         <div class="col-9 ">
                             <h2>CULTURAL LIFE</h2>
@@ -170,7 +190,7 @@
                     </p>
                 </div>
             </div>
-            </footer>
-</body>
+        </footer>
+    </body>
 
 </html>
