--- a/contenido/video.html
+++ b/contenido/video.html
@@ -15,53 +15,59 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script src="../js/video.js"></script>
-    <title>Juan Ortega Herrerías</title>
-
+    <title>Cultural Life</title>
 </head>
 
 <body>
     <!-- HEADER -->
     <header class="container-fluid">
-        <div class="row colorPrincipal justify-content-between ">
+        <div class="row colorPrincipal justify-content-between">
             <div class="col-12">
-                <div class="row align-items-center ">
+                <div class="row align-items-center">
                     <div class="col-1">
                         <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
-          de cultural life" />
+                                de cultural life" />
                     </div>
-                    <div class="col-12 col-md-6 ">
+                    <div class="col-12 col-md-6">
                         <h1 class="text-center text-md-start">CULTURAL LIFE</h1>
                         <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.</h2>
                     </div>
-                    <div class="col-12 col-md-4 justify-content-end ">
+                    <div class="col-12 col-md-4 justify-content-end">
                         <ul class="row list-inline text-center text-lg-end">
                             <li class="list-inline-item col">
                                 <a href="../contenido/login.html">
-                                    <i class="fa-solid fa-arrow-right-to-bracket fa-xs "> Entrar</i>
+                                    <i class="fa-solid
+                                            fa-arrow-right-to-bracket fa-xs">
+                                            Entrar</i>
                                 </a>
                             </li>
-                            <li class="list-inline-item col ">
-                                <a href="../contenido/nuevo_usuario.html"><i class="fa-solid fa-circle-plus fa-xs"> Nuevo_Usuario</i>
-                                </a>
+                            <li class="list-inline-item col">
+                                <a href="../contenido/nuevo_usuario.html"><i
+                                            class="fa-solid fa-circle-plus
+                                            fa-xs"> Nuevo_Usuario</i>
+                                    </a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
-
             <div class="col-12 col-lg-6">
-                <ul class="row list-inline justify-content-start ">
+                <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
-                        <a href="../index.html"><i class="fa-solid fa-house fa-2xs">&nbspInicio</i></a>
+                        <a href="../index.html"><i class="fa-solid fa-house
+                                    fa-2xs">&nbspInicio</i></a>
                     </li>
                     <li class="list-inline-item col-3">
-                        <a href="../contenido/el_critico.html"><i class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
+                        <a href="../contenido/el_critico.html"><i
+                                    class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
                     </li>
-                    <li class="list-inline-item  col-3">
-                        <a href="../contenido/novedades.html"><i class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
+                    <li class="list-inline-item col-3">
+                        <a href="../contenido/novedades.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
                     </li>
                     <li class="list-inline-item col-2">
-                        <a href="../contenido/contacto.html"><i class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
+                        <a href="../contenido/contacto.html"><i
+                                    class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
                     </li>
                 </ul>
             </div>
@@ -70,51 +76,70 @@
     <!-- MAIN -->
     <main class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
-            <div class="col-12 ">
+            <h4>Actividades EAF-2</h4>
+            <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/imatges.html"><i
+                                    class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/audio.html"><i class="fa-solid
+                                    fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="../contenido/video.html"><i
+                                    class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="../contenido/playlist.html"><i
+                                    class="fa-solid fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="../contenido/transicions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <div class="container-fluid row">
-            <h1 class="text-center mb-5 ">INTEGRACIÓN DE VÍDEO EN LA WEB</h1>
+            <h1 class="text-center mb-5">INTEGRACIÓN DE VÍDEO EN LA WEB</h1>
             <div class="col-12 col-md-4">
                 <p><a href="#" title="Tooltip es el widget!!">Tooltips</a> permiten obtener un pequeño texto informativo cuando pasamos por encima del enlace indicamos.</p><br/>
                 <p>He instalado desde la página de JQuery el witget <a href="https://jqueryui.com/tooltip/" title="Tooltip by JQuery">Tooltip</a> que hace que cambie el formato de estos mensajes.</p><br/>
                 <p>Tooltips son frecuentemente usados para ofrecer información extra en los formularios.</p>
-                <p><label for="Modulo">Asignatura?</label><input id="modulo" type="text" title="Es un método para informar al usuario."></p><br/><br/>
-                <p><b> Situate encima de la caja de texto!!.En los enlaces también!!</b> </p>
+                <p><label for="Modulo">Asignatura?</label><input id="modulo" type="text" title="Es un método
+                                    para informar al usuario."></p><br/><br/>
+                <p><b> Situate encima de la caja de
+                                            texto!!.En los enlaces también!!</b>
+                </p>
             </div>
-            <div class="col-12 offset-md-2 col-md-6 text-center">
+            <div class="col-12 offset-md-2 col-md-6
+                                    text-center">
                 <div class="col-12">
                     <h4>Tutorial de como instalar un widget Tooltip para una web.</h4>
                     <video controls width="500px">
-                    <source src="../videos/Video_Tutorial_Tooltip_JQuery.mp4"/>
-                </video>
+                                            <source
+                                                src="../videos/Video_Tutorial_Tooltip_JQuery.webm"
+                                                />
+                                            <source
+                                                src="../videos/Video_Tutorial_Tooltip_JQuery.mp4"
+                                                />
+                                        </video>
                 </div>
                 <div>
-                    <h4>Tutorial de instalación desde YouTube</h4>
+                    <h4>Tutorial de instalación desde YouTube
+                    </h4>
 
                     <iframe height="300px" width="500px" src="https://www.youtube.com/embed/aoaYTgxhU0k" allowfullscreen></iframe>
                 </div>
@@ -124,44 +149,47 @@
 
     <!-- FOOTER -->
     <footer class="container-fluid colorSecundario mt-5">
-        <div class="row  align-items-xl-center">
+        <div class="row align-items-xl-center">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
-                                    de instagram" /></a>
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono
+                                                    colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                                                    de instagram" /></a>
                     </li>
                     <li class="list-inline-item">
                         <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
-                                    colorSecundario" src="../imagenes/facebook.svg" alt="icono
-                                    de facebook" /></a>
+                                                    colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                                                    de facebook" /></a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
-                                    de twitter" /></a>
+                        <a href="https://twitter.com/" target="_blank"><img class="icono
+                                                    colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                                                    de twitter" /></a>
                     </li>
                 </ul>
             </div>
-            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
-                    <div class="container row align-items-center ">
-                        <div class="col ">
-                            <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
-                        </div>
-                        <div class="col-9 ">
-                            <h2>CULTURAL LIFE</h2>
-                            <h3>Nuestra vida es la cultura.</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 text-end col-xl-4 ">
+            <div class="d-none d-md-flex col-md-8 col-lg-6
+                                    col-xl-6" ">
+                                    <div class="container row align-items-center ">
+                                        <div class="col ">
+                                            <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
+                                        </div>
+                                        <div class="col-9 ">
+                                            <h2>CULTURAL LIFE</h2>
+                                            <h3>Nuestra vida es la cultura.</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12 text-end col-xl-4 ">
 
-                    <p>Te informamos de los términos legales y nuestras
-                        <a href="# ">Condiciones de uso</a>
-                    </p>
-                </div>
-            </div>
-        </footer>        
-    </body>
-
-</html>
+                                    <p>Te informamos de los términos legales y
+                                        nuestras
+                                        <a href="# ">Condiciones de uso</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </footer>
+                    </body>
+                </html>
