--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cultural Life</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="./css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -14,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300;400&family=Gelasio:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/guia_estils.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
-
+    <title>Cultural Life</title>
     <script>
         alert("Soc Juan Ortega Herrerías");
     </script>
@@ -23,27 +22,31 @@
 <body>
     <!-- Header -->
     <header class="container-fluid">
-        <div class="row colorPrincipal justify-content-between ">
+        <div class="row colorPrincipal justify-content-between">
             <div class="col-12">
-                <div class="row align-items-center ">
+                <div class="row align-items-center">
                     <div class="col-1">
                         <img class="web-icono d-none d-lg-flex" src="./imagenes/mascaras.png" alt="Icono
-          de cultural life" />
+                                de cultural life" />
                     </div>
-                    <div class="col-12 col-md-6 ">
+                    <div class="col-12 col-md-6">
                         <h1 class="text-center text-md-start">CULTURAL LIFE</h1>
                         <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.</h2>
                     </div>
-                    <div class="col-12 col-md-4 justify-content-end ">
+                    <div class="col-12 col-md-4 justify-content-end">
                         <ul class="row list-inline text-center text-lg-end">
                             <li class="list-inline-item col">
                                 <a href="./contenido/login.html">
-                                    <i class="fa-solid fa-arrow-right-to-bracket fa-xs "> Entrar</i>
+                                    <i class="fa-solid
+                                            fa-arrow-right-to-bracket fa-xs">
+                                            Entrar</i>
                                 </a>
                             </li>
-                            <li class="list-inline-item col ">
-                                <a href="./contenido/nuevo_usuario.html"><i class="fa-solid fa-circle-plus fa-xs"> Nuevo_Usuario</i>
-                                </a>
+                            <li class="list-inline-item col">
+                                <a href="./contenido/nuevo_usuario.html"><i
+                                            class="fa-solid fa-circle-plus
+                                            fa-xs"> Nuevo_Usuario</i>
+                                    </a>
                             </li>
                         </ul>
                     </div>
@@ -51,18 +54,22 @@
             </div>
 
             <div class="col-12 col-lg-6">
-                <ul class="row list-inline justify-content-start ">
+                <ul class="row list-inline justify-content-start">
                     <li class="list-inline-item col-2">
-                        <a href="./index.html"><i class="fa-solid fa-house fa-2xs">&nbspInicio</i></a>
+                        <a href="./index.html"><i class="fa-solid fa-house
+                                    fa-2xs">&nbspInicio</i></a>
                     </li>
                     <li class="list-inline-item col-3">
-                        <a href="./contenido/el_critico.html"><i class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
+                        <a href="./contenido/el_critico.html"><i
+                                    class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
                     </li>
-                    <li class="list-inline-item  col-3">
-                        <a href="./contenido/novedades.html"><i class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
+                    <li class="list-inline-item col-3">
+                        <a href="./contenido/novedades.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
                     </li>
                     <li class="list-inline-item col-2">
-                        <a href="./contenido/contacto.html"><i class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
+                        <a href="./contenido/contacto.html"><i
+                                    class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
                     </li>
                 </ul>
             </div>
@@ -71,29 +78,38 @@
     <!-- Contenido principal de la página -->
     <div class="container-fluid mt-1">
         <nav class="row">
-            <h4>Activitats EAF-2</h4>
-            <div class="col-12 ">
+            <h4>Actividades EAF-2</h4>
+            <div class="col-12">
                 <ul class="row list-inline justify-content-lg-start">
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="./contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="./contenido/imatges.html"><i
+                                    class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
                     </li>
-                    <li class="list-inline-item col-4  col-md-1 ">
-                        <a href="./contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="./contenido/audio.html"><i class="fa-solid
+                                    fa-headphones fa-2xs">&nbspAudio</i></a>
                     </li>
-                    <li class="list-inline-item  col-4 col-md-1 ">
-                        <a href="./contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    <li class="list-inline-item col-4 col-md-1">
+                        <a href="./contenido/video.html"><i class="fa-brands
+                                    fa-youtube fa-xs">&nbspVideo</i></a>
                     </li>
-                    <li class="list-inline-item col-3 col-md-1 ">
-                        <a href="./contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="./contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
-                    </li>
-                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="./contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    <li class="list-inline-item col-3 col-md-1">
+                        <a href="./contenido/playlist.html"><i
+                                    class="fa-solid fa-ear-listen fa-2xs">&nbspPlaylist</i></a>
                     </li>
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
-                        <a href="./contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                        <a href="./contenido/transicions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="./contenido/animacions.html"><i
+                                    class="fa-solid
+                                    fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="./contenido/grafica.html"><i
+                                    class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
                 </ul>
             </div>
@@ -101,20 +117,23 @@
         <div class="row">
             <div class="col-12 col-lg-4 col-xl-3">
                 <nav class="row">
-                    <div class="offset-3 col-6 offset-sm-4 col-sm-4 offset-lg-1 col-lg-12 text-center">
+                    <div class="offset-3 col-6 offset-sm-4 col-sm-4
+                            offset-lg-1 col-lg-12 text-center">
                         <form class="formulario row" action="./contenido/resultados.html">
-                            <input type="text" class="borde-colorPrincipal col" placeholder="Introduce búsqueda" />
+                            <input type="text" class="borde-colorPrincipal
+                                    col" placeholder="Introduce búsqueda" />
                             <input type="submit" class="input-button col" value="Buscar" />
                         </form>
                     </div>
-                    <div class="col-12  text-center mt-3 ">
+                    <div class="col-12 text-center mt-3">
                         <div>
                             <h3>REVISTAS CULTURALES</h3>
                         </div>
-                        <ul class="row  row-cols-lg-3 text-center  list-inline">
+                        <ul class="row row-cols-lg-3 text-center
+                                list-inline">
                             <li class="col-4 col-lg-12 mt-2"><a href="https://culturamas.es/" target="_blank">CULTURAMAS</a>
                             </li>
-                            <li class="col-4  col-lg-12 mt-2"><a href="https://www.elespanol.com/el-cultural/" target="_blank">EL_ESPAÑOL CULTURAL</a>
+                            <li class="col-4 col-lg-12 mt-2"><a href="https://www.elespanol.com/el-cultural/" target="_blank">EL_ESPAÑOL CULTURAL</a>
                             </li>
                             <li class="col-4 col-lg-12 mt-2"><a href="https://www.jotdown.es/" target="_blank">JOT_DOWN</a>
                             </li>
@@ -135,20 +154,21 @@
                     </div>
                 </aside>
             </div>
-            <main class="col-12 col-lg-8 col-xl-9 ">
+            <main class="col-12 col-lg-8 col-xl-9">
                 <div class="text-center mb-5">
                     <h2>RECOMENDAMOS ESTA SEMANA</h2>
                 </div>
-                <div class="row  row-cols-xl-6">
-                    <article class="col-12 col-xl-6 ">
-                        <div class="row text-center ">
+                <div class="row row-cols-xl-6">
+                    <article class="col-12 col-xl-6">
+                        <div class="row text-center">
                             <figure class="col-12">
-                                <img class="img-fluid  " src="./imagenes/aitana_concierto.jpg" alt="Disco nuevo de Aitana" />
+                                <img class="img-fluid" src="./imagenes/aitana_concierto.jpg" alt="Disco nuevo de Aitana" />
                                 <figcaption>Aitana en concierto</figcaption>
                             </figure>
                         </div>
                         <div>
-                            <h3 class="text-center">AITANA EN EL PALAU SANT JORDI</h3>
+                            <h3 class="text-center">AITANA EN EL PALAU SANT JORDI
+                            </h3>
                             <p>
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, inventore vel doloremque placeat delectus exercitationem adipisci repudiandae fuga veniam, maxime sit maiores quam iusto numquam dolores cupiditate veritatis libero temporibus quod pariatur
                                 fugiat harum et! Beatae tenetur esse magni veniam, totam distinctio eaque. Dolorem libero molestiae ducimus mollitia minima iure? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum minima, quae nam,
@@ -159,13 +179,15 @@
                                 eos dolores tempora. Error qui ratione omnis, esse illum placeat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam
                                 architecto deleniti quidem ad fuga quo necessitatibus non odio delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
                             </p>
-                            <p><a href="./contenido/resultados.html">COMPRAR ENTRADAS</a></p>
+                            <p><a href="./contenido/resultados.html">COMPRAR
+                                        ENTRADAS</a></p>
                         </div>
                     </article>
-                    <article class="col-12 col-xl-6 ">
+                    <article class="col-12 col-xl-6">
                         <div class="row">
                             <figure class="col-12">
-                                <img class="img-fluid " src="./imagenes/batalla_gallos.jpeg" alt="dos campeones de las batllas de gallos de rap." />
+                                <img class="img-fluid" src="./imagenes/batalla_gallos.jpeg" alt="dos campeones de las batllas de
+                                        gallos de rap." />
                                 <figcaption>Los campeones de 2019 y 2020, WOS y AZCINO.</figcaption>
                             </figure>
                         </div>
@@ -185,14 +207,15 @@
                                 tempora. Error qui ratione omnis, esse illum placeat distinctio vel hic assumenda deserunt molestiae sit repellat, sequi aut, quod facilis quos inventore! Pariatur, exercitationem consectetur? Ratione ipsam architecto deleniti
                                 quidem ad fuga quo necessitatibus non odio delectus rerum, dignissimos eos vero eligendi neque laudantium totam eveniet perspiciatis? Minus nam qui sequi rem recusandae?
                             </p>
-                            <p><a href="./contenido/resultados.html">COMPRAR ENTRADAS</a></p>
+                            <p><a href="./contenido/resultados.html">COMPRAR
+                                        ENTRADAS</a></p>
                         </div>
                     </article>
                 </div>
             </main>
             <!-- Footer -->
             <aside class="d-flex d-lg-none col-12 col-lg-12 order-lg-0">
-                <div class=" row container-fluid">
+                <div class="row container-fluid">
                     <div class="col">
                         <img class="img-fluid" src="./imagenes/como-hacer-un-banner.png" alt="Esto es un banner publicitario" />
                     </div>
@@ -207,28 +230,33 @@
         </div>
     </div>
 
-    <footer class="container-fluid colorSecundario ">
+    <footer class="container-fluid colorSecundario">
         <div class="row mt-5 align-items-xl-center">
             <div class="col-12 col-md-4 col-lg-3 col-xl-2">
                 <h3>Mantente informado...</h3>
-                <ul class="list-inline ">
-                    <li class="list-inline-item ">
-                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario " src="./imagenes/instagram.svg " alt="icono de instagram " /></a>
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="./imagenes/instagram.svg" alt="icono
+                                    de instagram" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/facebook.svg " alt="icono de facebook " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
+                                    colorSecundario" src="./imagenes/facebook.svg" alt="icono
+                                    de facebook" /></a>
                     </li>
-                    <li class="list-inline-item ">
-                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario " src="./imagenes/twitter.svg " alt="icono de twitter " /></a>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="./imagenes/twitter.svg" alt="icono
+                                    de twitter" /></a>
                     </li>
                 </ul>
             </div>
             <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6">
                 <div class="container row align-items-center">
-                    <div class="col ">
-                        <img class="icono-mediano " src="./imagenes/mascaras.png " alt="Icono de cultural life " />
+                    <div class="col">
+                        <img class="icono-mediano" src="./imagenes/mascaras.png" alt="Icono
+                                de cultural life" />
                     </div>
-                    <div class="col-9 ">
+                    <div class="col-9">
                         <h2>CULTURAL LIFE</h2>
                         <h3>Nuestra vida es la cultura.</h3>
                     </div>
@@ -237,12 +265,11 @@
             <div class="col-12 text-end col-xl-4">
 
                 <p>Te informamos de los términos legales y nuestras
-                    <a href="# ">Condiciones de uso</a>
+                    <a href="#">Condiciones de uso</a>
                 </p>
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
